--- a/prepLandscape.Rmd
+++ b/prepLandscape.Rmd
@@ -53,11 +53,11 @@ This is a template for module documentation, and should be changed to reflect yo
 ### Module inputs and parameters
 
 Describe input data required by the module and how to obtain it (e.g., directly from online sources or supplied by other modules)
-If `sourceURL` is specified, `downloadData("prepLandscape", "C:/Users/julie/Documents/git-local")` may be sufficient.
+If `sourceURL` is specified, `downloadData("prepLandscape", "C:/Users/julie/Documents")` may be sufficient.
 Table \@ref(tab:moduleInputs-prepLandscape) shows the full list of module inputs.
 
 ```{r moduleInputs-prepLandscape, echo = FALSE, eval = TRUE, message = FALSE, warning = FALSE}
-df_inputs <- SpaDES.core::moduleInputs("prepLandscape", "C:/Users/julie/Documents/git-local")
+df_inputs <- SpaDES.core::moduleInputs("prepLandscape", "C:/Users/julie/Documents")
 knitr::kable(df_inputs,
              caption = "List of (ref:prepLandscape) input objects and their description.") |>
   kableExtra::kable_styling(latex_options = "scale_down", full_width = TRUE)
@@ -67,7 +67,7 @@ Provide a summary of user-visible parameters (Table \@ref(tab:moduleParams-prepL
 
 
 ```{r moduleParams-prepLandscape, echo = FALSE, eval = TRUE, message = FALSE, warning = FALSE}
-df_params <- SpaDES.core::moduleParams("prepLandscape", "C:/Users/julie/Documents/git-local")
+df_params <- SpaDES.core::moduleParams("prepLandscape", "C:/Users/julie/Documents")
 knitr::kable(df_params, caption = "List of (ref:prepLandscape) parameters and their description.") |>
   kableExtra::kable_styling(latex_options = "scale_down", full_width = TRUE)
 ```
@@ -89,7 +89,7 @@ Write what is saved.
 Description of the module outputs (Table \@ref(tab:moduleOutputs-prepLandscape)).
 
 ```{r moduleOutputs-prepLandscape, echo = FALSE, eval = TRUE, message = FALSE, warning = FALSE}
-df_outputs <- SpaDES.core::moduleOutputs("prepLandscape", "C:/Users/julie/Documents/git-local")
+df_outputs <- SpaDES.core::moduleOutputs("prepLandscape", "C:/Users/julie/Documents")
 knitr::kable(df_outputs, caption = "List of (ref:prepLandscape) outputs and their description.") |>
   kableExtra::kable_styling(latex_options = "scale_down", full_width = TRUE)
 ```
